[package]
name = "pq_window"
version = "0.1.0"
authors = ["wang.hanbin <544430497@qq.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
winit = "0.23.0"
raw-window-handle = "0.3.3"

[build-dependencies]
csharpbindgen = {git = "https://github.com/whaqzhzd/csharpbindgen",rev="be164c2" }

[target.'cfg(target_os = "android")'.dependencies]

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os = "macos")'.dependencies]

[lib]
name="pq_window"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z' 
codegen-units = 1
panic = 'abort'